Resolves: tdf#107411 LibreOffice hangs at RTF import time

regression from...

commit b993942622897fc64a1f7462189fa0463eb30e1c
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sat Apr 1 16:43:04 2017 +0100

    ubsan: use WrapTextMode_MAKE_FIXED_SIZE instead of -1 as unset flag

cause WrapTextMode_MAKE_FIXED_SIZE is >= 0

Change-Id: I6b5adbcc38cc841c5df9a0af9acdf634d3c6c757